--- a/Src/Website/Index.htm
+++ b/Src/Website/Index.htm
@@ -22,20 +22,24 @@
                             <h1>Open Fiddle</h1>
                         </li>
                         <li>
-                            <a href="#/console">Console</a>
+                            <ul class="list-inline">
+                                <li>
+                                    <a href="#/console">Console</a>
+                                </li>
+                                <li>
+                                    <a href="#/script">Script</a>
+                                </li>
+                                <!--<li ng-show="loggedIn">
+                                    <a href="" ng-click="logout()">{{username}} | Sign Out</a>
+                                </li>
+                                <li ng-hide="loggedIn">
+                                    <a href="#/signin">Sign In</a>
+                                </li>
+                                <li ng-hide="loggedIn">
+                                    <a href="#/register">Register</a>
+                                </li>-->
+                            </ul>
                         </li>
-                        <li>
-                            <a href="#/script">Script</a>
-                        </li>
-                        <!--<li ng-show="loggedIn">
-                            <a href="" ng-click="logout()">{{username}} | Sign Out</a>
-                        </li>
-                        <li ng-hide="loggedIn">
-                            <a href="#/signin">Sign In</a>
-                        </li>
-                        <li ng-hide="loggedIn">
-                            <a href="#/register">Register</a>
-                        </li>-->
                     </ul>
                 </div>
             </nav>
@@ -49,7 +53,8 @@
             <div class="col-md-10 col-md-offset-1">
                 <footer>
                     <div class="text-right">
-                        Open Fiddle &copy; <script>document.write(new Date().getFullYear())</script>
+                        Open Fiddle &copy;
+                        <script>document.write(new Date().getFullYear())</script>
                     </div>
                 </footer>
             </div>
